# ai_liderazgo_extraordinario

./: .gitignore  pyproject.toml  qr.py  usa_ai.rst
docs/: index.html
docs/css/: base.css
